[package]
name = "pistoncore-winit_window"
version = "0.20.2"
authors = [
  "Layl <LaylConway@users.noreply.github.com>",
  "Sven Nilsen <bvssvni@gmail.com",
]
keywords = ["winit", "window", "piston"]
description = "A winit back-end for pistoncore-window"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pistondevelopers/winit_window.git"
homepage = "https://github.com/pistondevelopers/winit_window"
edition = "2024"

[features]
default = []

[lib]
name = "winit_window"
path = "src/lib.rs"

[dependencies]
winit = "0.30.12"
pistoncore-input = "1.0.0"
pistoncore-window = "1.0.0"
rustc-hash = "2.1.1"

[dev-dependencies]
piston = "1.0.0"
